Minor style fixes in light and dark mode (#6489)
* Minor style fixes in light and dark mode

* Add changelog

--- a/plugins/main/public/styles/common.scss
+++ b/plugins/main/public/styles/common.scss
@@ -1869,9 +1869,9 @@ iframe.width-changed {
 
 .wz-app {
   .euiPage {
-    background-color: #fafbfd;
+    background-color: transparent;
   }
   [name='OverviewWelcome'] .euiIcon--app .euiIcon__fillSecondary {
-    fill: #000000;
+    fill: #000000bb;
   }
 }
